<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_marketplace"
        android:icon="@drawable/market"
        android:title="@string/marketplace" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/chat"
        android:title="@string/chat" />

    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/user"
        android:title="@string/user" />

</menu>
