...
    <string name="condition_label">Condition: %s</string>
    <string name="payment_mode_label">Mode of Payment: %s</string>
    <string name="seller_email_label">Email: %s</string>
    <string name="seller_contact_label">Contact: %s</string>
    <string name="all">All</string>
    <string name="electronics">Electronics</string>
    <string name="books">Books</string>
    <string name="free">Free</string>
    <string name="notes">Notes</string>
    <string name="lost_found">Lost and Found</string>
    <string name="clothing">Clothing</string>
    <string name="house">House</string>
    <string name="category">CATEGORY</string>
...
