<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.Activities.LoginActivity">

    <!-- Welcome Message -->
    <TextView
        android:id="@+id/smileLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_smile"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="32sp"
        android:textColor="#161515"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>

    <!-- Logo -->
    <ImageView
        android:id="@+id/umLogo"
        android:layout_width="180dp"
        android:layout_height="140dp"
        android:src="@drawable/um_logo"
        app:layout_constraintTop_toBottomOf="@id/smileLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <!-- Email Icon -->

    <!-- Email Field -->
    <ImageView
        android:id="@+id/loginIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/login_icon_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/umLogo" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/umLogo"
        app:layout_constraintStart_toEndOf="@id/loginIcon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"/>

    <!-- Password Icon -->

    <!-- Password Field -->
    <ImageView
        android:id="@+id/passwordIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/password_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintStart_toEndOf="@id/passwordIcon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"/>

    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        app:layout_constraintStart_toStartOf="@id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        android:layout_marginTop="5dp"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/rememberMeCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"/>

    <!-- Sign-Up Message -->
    <TextView
        android:id="@+id/signUpMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_dark"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
